Added a new game and updated some stuff

--- a/_posts/2005-01-28-lugaru.md
+++ b/_posts/2005-01-28-lugaru.md
@@ -22,7 +22,6 @@ publisher:
 series: Lugaru
 excerpt: Play as an anthropomorphic rabbit trying to save his homeland with high-flying platforming and hardcore hand-to-hand and melee combat.
 link: https://en.wikipedia.org/wiki/Lugaru
-img: https://upload.wikimedia.org/wikipedia/en/2/28/Lugaru_logo.png
-comments: true
+suggester: 
 ---
 
