--- a/_posts/2006-04-20-okami.md
+++ b/_posts/2006-04-20-okami.md
@@ -24,7 +24,6 @@ publisher: Capcom
 series: Okami
 excerpt: You are the Sun Goddess Amaterasu in the physical form of a white wolf, and you must save the country of Nippon. There's magical powers and combat in this game, but your character plays and behaves much like a normal wolf.
 link: https://en.wikipedia.org/wiki/%C5%8Ckami
-img: https://upload.wikimedia.org/wikipedia/en/b/be/OkamiNTSCcoverFinal.jpg
-comments: true
+suggester: 
 ---
 
