--- a/_posts/2011-01-25-tera.md
+++ b/_posts/2011-01-25-tera.md
@@ -24,7 +24,6 @@ publisher:
 series: 
 excerpt: "In this MMORPG there are two playable races that have animal traits: the Elin, which resemble girls with animal ears and tails, and the Popori, which are stout bipedal talking animals."
 link: https://en.wikipedia.org/wiki/TERA_(video_game)
-img: https://upload.wikimedia.org/wikipedia/en/0/0c/Tera_online_box_artwork.png
-comments: true
+suggester: 
 ---
 
