--- a/_posts/2006-04-20-okami.md
+++ b/_posts/2006-04-20-okami.md
@@ -25,6 +25,8 @@ publisher: Capcom
 series: Okami
 excerpt: You are the Sun Goddess Amaterasu in the physical form of a white wolf, and you must save the country of Nippon. There's magical powers and combat in this game, but your character plays and behaves much like a normal wolf.
 link: https://en.wikipedia.org/wiki/%C5%8Ckami
+img: https://assets.pcmag.com/media/images/480257-exploring-towns.jpg?width=740&height=740&boxFit=y
 suggester: 
+suggesterurl: 
 ---
 
