--- a/_posts/2011-01-25-tera.md
+++ b/_posts/2011-01-25-tera.md
@@ -25,7 +25,7 @@ publisher:
 series: 
 excerpt: "In this MMORPG there are two playable races that have animal traits: the Elin, which resemble girls with animal ears and tails, and the Popori, which are stout bipedal talking animals."
 link: https://en.wikipedia.org/wiki/TERA_(video_game)
-img: https://i.pinimg.com/originals/70/7b/46/707b46cb69c614b05922c3743ffd22a0.jpg
+img: tera.jpg
 suggester: 
 suggesterurl: 
 ---
