--- a/_posts/2005-01-28-lugaru.md
+++ b/_posts/2005-01-28-lugaru.md
@@ -2,7 +2,7 @@
 layout: default
 title: Lugaru
 date: 2005-01-28
-year: 2005
+latestdate: 
 artstyle: 3D
 playable: "Yes"
 mods: "Yes"
@@ -20,7 +20,7 @@ platform:
 developer: Wolfire Games
 publisher:
 - Wolfire Games
-series: Lugaru
+series: 
 excerpt: Play as an anthropomorphic rabbit trying to save his homeland with high-flying platforming and hardcore hand-to-hand and melee combat.
 link: https://en.wikipedia.org/wiki/Lugaru
 img: lugaru.jpg
