--- a/_posts/2013-08-28-shelter.md
+++ b/_posts/2013-08-28-shelter.md
@@ -2,28 +2,33 @@
 layout: default
 title: Shelter
 date: 2013-08-28
-year: 2013
+latestdate: 2015-03-09
 artstyle: 3D
 playable: "Yes"
 mods: "No"
 type: realistic
 species: 
 - badger
+- big cat
 - other
 emoticon: 
 - 🦡
+- 🐈
 genre: 
 - survival
 platform:
 - Windows
 - macOS
+- Linux
 developer: Might and Delight
 publisher:
 - Might and Delight
-series: Shelter
-excerpt: Play as a badger looking after her cubs. 
+series: 
+- Shelter
+- Shelter 2
+excerpt: Play as a badger looking after her cubs in the first game and as a mother lynx in the second game. 
 link: https://en.wikipedia.org/wiki/Shelter_(video_game)
-img: shelter.jpg
+img: shelter2.jpg
 suggester: 
 suggesterurl:  
 ---
