--- a/_posts/2011-01-25-tera.md
+++ b/_posts/2011-01-25-tera.md
@@ -2,7 +2,7 @@
 layout: default
 title: TERA
 date: 2011-01-25
-year: 2011
+latestdate: 
 artstyle: 3D
 playable: "Yes"
 mods: "No"
@@ -25,7 +25,7 @@ publisher:
 - En Masse Entertainment (NA)
 - Gameforge (EU)
 series: 
-excerpt: "In this MMORPG there are two playable races that have animal traits: the Elin, which resemble girls with animal ears and tails, and the Popori, which are stout bipedal talking animals."
+excerpt: "In this MMORPG there are two playable races that have animal traits: the Elin, which resemble girls with animal ears and tails, and the Popori, which are stout bipedal talking animals. Something that sets this MMORPG apart from the rest (except for Blade & Soul) is the satisfying action combat."
 link: https://en.wikipedia.org/wiki/TERA_(video_game)
 img: tera.jpg
 suggester: 
