--- a/_posts/2006-04-20-okami.md
+++ b/_posts/2006-04-20-okami.md
@@ -3,7 +3,7 @@ layout: default
 title: Ōkami
 date: 2006-04-20
 latestdate: 
-artstyle: 3D
+artstyle: 3D Cel-shaded
 playable: "Yes"
 mods: "No"
 type: realistic
@@ -22,7 +22,7 @@ platform:
 - Windows
 developer: Clover Studio
 publisher: Capcom
-series: Okami
+series: 
 excerpt: You are the Sun Goddess Amaterasu in the physical form of a white wolf, and you must save the country of Nippon. There's magical powers and combat in this game, but your character plays and behaves much like a normal wolf.
 link: https://en.wikipedia.org/wiki/%C5%8Ckami
 img: okami.jpg
